# fun

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  settings.rs
src/tui/: act.rs  help.rs  mod.rs  render.rs
