[package]
name = "fun"
description = "A funny file explorer."
version = "0.1.0"
edition = "2021"
keywords = ["tui", "terminal", "file", "explorer", "fun"]
repository = "https://github.com/Rhelvetican/fun"
readme = "README.md"

[dependencies]
dirs = "5"
regex = "1.10.3"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
textwrap = "0.16"
unicode-segmentation = "1.10.1"
crossterm = "0.27.0"

[dependencies.clap]
version = "4"
default-features = false
features = ["wrap_help", "suggestions", "std", "derive", "usage"]

[dev-dependencies]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.rel_size]
inherits = "release"
opt-level = "z"
